--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ PGPASSWORD=senhapostgres
 # --- Configuração do JWT ---
 JWT_SECRET=suaChaveSecretaAqui54321
 JWT_EXPIRATION_TIME=3600s
+
+# --- Cache Settings ---
+REDIS_HOST=localhost
+REDIS_PORT=6379
