--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/bull": "^11.0.4",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
@@ -31,9 +32,12 @@
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^8.0.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/cache-manager-redis-store": "^2.0.4",
     "@types/passport-jwt": "^4.0.1",
     "bcryptjs": "^3.0.2",
     "bull": "^4.16.5",
+    "cache-manager": "^7.2.4",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.2",
